questionnaire extra space fixes

--- a/client/app/css/main.css
+++ b/client/app/css/main.css
@@ -664,7 +664,6 @@ p:last-child {
 
 .description {
   color: #1d1f2a;
-  white-space: pre-wrap;
 }
 
 .select-card {
